change summary: 1. Added few test cases. 2. Deleted unnecessary files.
Signed-off-by: Akhil Vijjapu <akhil.vijjapu.4@gmail.com>

--- a/dd/Makefile
+++ b/dd/Makefile
@@ -1,3 +1,11 @@
 
 obj-m := dd_sam.o
 
+KERNEL_SOURCE := /usr/src/linux-headers-4.14.0-deepin2-amd64/
+PWD := $(shell pwd)
+
+default:
+	make -C ${KERNEL_SOURCE} SUBDIRS=${PWD} modules
+
+clean:
+	make -C ${KERNEL_SOURCE} SUBDIRS=${PWD} clean
